syntax = "proto3";

option csharp_namespace = "KafkaGateway";

service KafkaService {
  rpc ProduceMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string topic = 1;
  string key = 2;
  string value = 3;
}

message MessageReply {
  bool success = 1;
}